Refactored Observer Pattern for the canvas